<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SSI Service</string>
    <string name="app_version">V 1.0</string>

    <!-- DEFAULT -->
    <string name="project_status">Projekt Status: </string>
    <string name="project">Project</string>
    <string name="filter">Filter</string>
    <string name="status">Status</string>
    <string name="days">Tage</string>
    <string name="hour">Stunde</string>
    <string name="hours">Stunden</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minuten</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="loading_error">FEHLER</string>
    <string name="found">gefunden</string>

    <string name="add">hinzufügen</string>
    <string name="update">aktualisieren</string>
    <string name="delete">löschen</string>

    <string name="state_running">RUNNING</string>
    <string name="state_unknown">UNKNOWN</string>

    <!-- Fragment Create Project -->
    <string name="fragment_create_project_title">Projekt anlegen</string>
    <string name="fragment_create_project_text_view_add_project">Projekt hinzufügen</string>
    <string name="fragment_create_project_edit_text_hint_alias">Alias</string>
    <string name="fragment_create_project_edit_text_hint_ip_address">IP Adresse</string>
    <string name="fragment_create_project_edit_text_hint_user_name">Benutzername</string>
    <string name="fragment_create_project_edit_text_hint_password">Passwort</string>
    <string name="fragment_create_project_message_server_address_not_correct">Serveradresse ist nicht korrekt.</string>
    <string name="fragment_create_project_message_server_address_is_no_valid_lighthouse_address">Serveradresse ist keine valide Lighthouse Adresse</string>
    <string name="fragment_create_project_message_please_insert_all_information_in_the_input_field">Bitte befüllen Sie alle Eingabefelder</string>
    <string name="fragment_create_project_message_login_data_not_correct">Logindaten sind nicht korrekt.</string>
    <string name="fragment_create_project_message_server_address_not_correct_anyhow_add">Serveradresse ist nicht korrekt. Projekt dennoch hinzufügen?</string>
    <string name="fragment_create_project_message_server_address_not_correct_anyhow_update">Serveradresse ist nicht korrekt. Projekt dennoch aktualisieren?</string>
    <string name="fragment_create_project_message_application_version_equals_not_2.0">Die Version der Applikation entspricht nicht der Version 2.0</string>

    <string-array name="fragment_create_project_drop_down_box_time_input">
        <item>Minuten</item>
        <item>Stunden</item>
    </string-array>

    <!-- Fragment Custom List - Application Info -->
    <string name="fragment_custom_list_application_info_title">Applikation Information</string>
    <string name="fragment_custom_list_application_info_project_headline">Projekt</string>
    <string name="fragment_custom_list_application_info_project_name">Name</string>
    <string name="fragment_custom_list_application_info_project_location">Ort</string>
    <string name="fragment_custom_list_application_info_project_order_nr">Bestell Nr.</string>

    <string name="fragment_custom_list_application_info_state_headline">Zustand</string>
    <string name="fragment_custom_list_application_info_state_status">Status</string>
    <string name="fragment_custom_list_application_info_state_since">Seit</string>

    <string name="fragment_custom_list_application_info_build_headline">Build</string>
    <string name="fragment_custom_list_application_info_build_version">Version</string>
    <string name="fragment_custom_list_application_info_build_number">Nummer</string>
    <string name="fragment_custom_list_application_info_build_builtBy">Von</string>
    <string name="fragment_custom_list_application_info_build_builtOn">Am</string>

    <string name="fragment_custom_list_application_info_time_headline">Zeit vor Ort</string>
    <string name="fragment_custom_list_application_info_time_stamp">Stempel</string>
    <string name="fragment_custom_list_application_info_time_offset">Ausgleich</string>

    <string name="fragment_custom_list_application_info_enabled_modules_headline">Freigegebene Module</string>

    <!-- Fragment Project List -->
    <string name="fragment_project_list_title">Hinzugefügte Projekte</string>
    <string-array name="fragment_project_list_drop_down_box_settings">
        <item>Bearbeiten</item>
        <item>Löschen</item>
    </string-array>
    <string name="fragment_project_list_error_project_not_available">"Projekt kann nicht geladen werden. IP-Adresse ist nicht erreichbar."</string>

    <!-- Launch Board -->
    <string name="fragment_launch_board_server_address_not_available">Server ist nicht erreichbar.</string>
    <string name="fragment_launch_board_state_not_available">NICHT ERREICHBAR</string>
    <string name="fragment_launch_board_card_module">Module</string>
    <string name="fragment_launch_board_card_component">Komponente</string>
    <string name="fragment_launch_board_card_notification">Meldungen</string>
    <string name="fragment_launch_board_card_kpi">KPI</string>

    <string name="fragment_launch_board_error_module">"Die Platform und Plugin Module konnten nicht geladen werden."</string>
    <string name="fragment_launch_board_error_component">"Die Komponenten konnten nicht geladen werden."</string>
    <string name="fragment_launch_board_error_notification">"Die Meldungen konnten nicht geladen werden."</string>
    <string name="fragment_launch_board_error_kpi">"Die KPI´s konnten nicht geladen werden."</string>

    <!-- Fragment Module List -->
    <string name="fragment_module_list_title">Module</string>
    <string name="fragment_module_list_card_view_enabled">Freigegeben</string>
    <string name="fragment_module_list_card_view_status">Status</string>

    <!-- Fragment Component List -->
    <string name="fragment_component_list_title">Komponente</string>
    <string name="fragment_component_list_card_view_managed">Verwaltet</string>
    <string name="fragment_component_list_card_view_status">Status</string>
    <string name="fragment_component_list_card_view_enabled">Freigegeben</string>

    <!-- Fragment Notification List -->
    <string name="fragment_notification_list_title">Meldungen</string>

    <!-- Fragment KPI Definition List -->
    <string name="fragment_kpi_definition_list_title">KPI Definitionen</string>
    <string name="fragment_kpi_definition_list_description">Beschreibung</string>
    <string name="fragment_kpi_definition_list_tap_key">Schlüssel</string>
    <string name="fragment_kpi_definition_list_tap_name">Name</string>
    <string name="fragment_kpi_definition_list_filter_hint">Filter nach ...</string>
    <string name="fragment_kpi_definition_list_type_is_not_known">Kpi Type ist nicht bekannt. Type: </string>

    <!-- Fragment Create KPI Filter -->
    <string name="fragment_kpi_filter_title">Filter für Kpi anlegen</string>
    <string name="fragment_create_kpi_filter_text_view_add_kpi_filter">Filter hinzufügen</string>
    <string name="fragment_create_Kpi_filter_alert_text_filter_already_exists">Es existiert bereits ein Filter mit diesen Eingabewerten.</string>
    <string name="fragment_create_kpi_filter_message_please_insert_all_information_in_the_input_field">Bitte beachten Sie die Eingabefelder.</string>

    <!-- Fragment KPI Filter Average -->
    <string name="fragment_create_kpi_filter_average_text_view_average">average</string>
    <string name="fragment_create_kpi_filter_average_text_view_num_samples">numSamples</string>
    <string name="fragment_create_kpi_filter_average_text_view_min">minimum</string>
    <string name="fragment_create_kpi_filter_average_text_view_max">maximum</string>
    <string name="fragment_create_kpi_filter_average_text_view_std_dev">stdDev</string>

    <!-- Fragment KPI Filter Singular Double -->
    <string name="fragment_create_kpi_filter_singular_double_text_view_value">Wert</string>

    <!-- Fragment KPI Filter Singular Long -->
    <string name="fragment_create_kpi_filter_singular_long_text_view_value">Wert</string>

    <!-- Fragment KPI Filter Spectrum -->
    <string name="fragment_create_kpi_filter_spectrum_text_view_value">Wert</string>
    <string name="fragment_create_kpi_filter_spectrum_text_view_spinner_categories">Kategorie</string>

    <!-- Fragment KPI Filter Status Event -->
    <string name="fragment_create_kpi_filter_status_event_text_view_value">Wert</string>

    <!-- Fragment KPI Filter List -->
    <string name="fragment_kpi_filter_list_title">KPI Filterliste</string>

    <!-- Fragment Create Notification Filter -->
    <string name="fragment_notification_filter_title">Filter für Meldung anlegen</string>
    <string name="fragment_create_notification_filter_text_view_add_notification_filter">Filter hinzufügen</string>
    <string name="fragment_create_notification_filter_text_hint_note">Knoten</string>
    <string name="fragment_create_notification_filter_text_hint_active_time">Aktive Zeit</string>
    <string name="fragment_create_notification_filter_text_hint_severity">Severity:</string>
    <string name="fragment_create_notification_filter_text_hint_text">Text</string>
    <string name="fragment_create_notification_filter_alert_text_filter_already_exists">Es existiert bereits ein Filter mit diesen Eingabewerten.</string>
    <string-array name="fragment_create_notification_filter_drop_down_box_severity_input">
        <item>ERROR</item>
        <item>WARN</item>
        <item>INFO</item>
    </string-array>

    <!-- Fragment Notification Filter List -->
    <string name="fragment_notification_filter_list_title">Meldungen: Filter Liste</string>
    <string name="fragment_notification_filter_list_alert_no_notifications_found_for_this_filter">Es konnten keine Meldungen zu diesem Filter gefunden werden.</string>


    <!-- Android Notification -->
    <string name="notification_project_is_not_available">Das Projekt ist nicht verfügbar.</string>
    <string name="notification_project_application_status_is_not_running">Der Status der Projekt Application ist nicht "Running".</string>
    <string name="notification_not_available">konnten nicht geladen werden.</string>
    <string name="notification_includes_errors">beinhaltet Fehler.</string>
    <string name="notification_filter">mittels eines Filters gefunden.</string>

</resources>
