<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.create.filter.notification.FragmentCreateNotificationFilter">

    <include
        android:id="@+id/fragment_create_notification_filter_include_headline"
        layout="@layout/default_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top" />

    <ImageView
        android:id="@+id/fragment_create_notification_filter_image_view_filter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/fragment_create_notification_filter_include_headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_filter" />

    <TextView
        android:id="@+id/fragment_create_notification_filter_text_view_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_create_notification_filter_image_view_filter"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/fragment_create_notification_filter_text_view_add_notification_filter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGray"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_create_notification_filter_button_final"
        android:layout_below="@+id/fragment_create_notification_filter_text_view_add"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_create_notification_filter_layout_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/fragment_create_notification_filter_edit_text_note"
                    android:layout_width="266dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_create_notification_filter_text_hint_note"
                    android:inputType="textUri"
                    android:lines="1" />

                <Button
                    android:id="@+id/fragment_create_notification_filter_button_show_notification_list"
                    android:layout_width="44dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/fragment_create_notification_filter_edit_text_note"
                    android:background="@color/defaultColor"
                    android:drawableLeft="@drawable/icon_search"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_create_notification_filter_relative_layout_active_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/fragment_create_notification_filter_edit_text_active_time"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_create_notification_filter_text_hint_active_time"
                    android:inputType="number"
                    android:text="0" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/fragment_create_notification_filter_edit_text_active_time">

                    <Spinner
                        android:id="@+id/fragment_create_notification_filter_spinner_time_input"
                        android:layout_width="115dp"
                        android:layout_height="40dp"
                        android:background="@color/defaultColor" />

                    <ImageView
                        android:id="@+id/fragment_create_notification_filter_image_time_drop_down"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignRight="@+id/fragment_create_notification_filter_spinner_time_input"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="icon_drop_down_arrow"
                        android:src="@drawable/icon_drop_down_arrow" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_create_notification_filter_relative_layout_severity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_create_notification_filter_text_view_severity"
                    android:layout_width="199dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/fragment_create_notification_filter_text_hint_severity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/fragment_create_notification_filter_text_view_severity">

                    <Spinner
                        android:id="@+id/fragment_create_notification_filter_spinner_severity_input"
                        android:layout_width="115dp"
                        android:layout_height="40dp"
                        android:background="@color/defaultColor" />

                    <ImageView
                        android:id="@+id/fragment_create_notification_filter_image_severity_drop_down"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignRight="@+id/fragment_create_notification_filter_spinner_severity_input"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="icon_drop_down_arrow"
                        android:src="@drawable/icon_drop_down_arrow" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_create_notification_filter_relative_layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fragment_create_notification_filter_edit_text_text"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:hint="@string/fragment_create_notification_filter_text_hint_text"
                    android:inputType="textMultiLine" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fragment_create_notification_filter_button_final"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@color/defaultColor"
        android:text="@string/add" />

</RelativeLayout>
