<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.createproject.FragmentCreateProject">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/default_action_bar"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/fragment_create_project_include_head_line" />

    <ImageView
        android:id="@+id/fragment_create_project_image_view_project"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/fragment_create_project_include_head_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_project"/>

    <TextView
        android:id="@+id/fragment_create_project_text_view_add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fragment_create_project_text_view_add_project"
        android:layout_below="@+id/fragment_create_project_image_view_project"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/fragment_create_project_relative_layout_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/fragment_create_project_text_view_add_project"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/fragment_create_project_image_view_ip"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_ip"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/fragment_create_project_edit_text_project_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:lines="1"
            android:maxLength="20"
            android:hint="@string/fragment_create_project_edit_text_hint_ip_address"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/fragment_create_project_image_view_ip"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_create_project_relative_layout_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/fragment_create_project_relative_layout_ip_address"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/fragment_create_project_image_user"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_user"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/fragment_create_project_edit_text_user_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="20"
            android:hint="@string/fragment_create_project_edit_text_hint_user_name"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/fragment_create_project_image_user"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_create_project_relative_layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/fragment_create_project_relative_layout_user_name"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/fragment_create_project_image_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_password"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/fragment_create_project_edit_text_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:hint="@string/fragment_create_project_edit_text_hint_password"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/fragment_create_project_image_password"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/fragment_create_project_button_add_project"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBorder"
        android:text="@string/fragment_create_project_button_add_project"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
