<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_standard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/fragment_custom_list_include_headline"
        layout="@layout/default_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fragment_kpi_definition_list_tap_button_key"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="@string/fragment_kpi_definition_list_tap_key" />

            <Button
                android:id="@+id/fragment_kpi_definition_list_tap_button_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/defaultColor"
                android:text="@string/fragment_kpi_definition_list_tap_name"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginRight="5dp">

                <EditText
                    android:id="@+id/fragment_kpi_definition_list_edit_text_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/fragment_kpi_definition_list_filter_hint" />

                <Button
                    android:id="@+id/fragment_kpi_definition_list_button_filter_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/icon_remove"
                    android:visibility="gone"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/fragment_kpi_definition_list_image_button_filter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@drawable/default_button_selector"
                android:src="@drawable/icon_filter"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_standard_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical" />

</LinearLayout>